# cibuildwheel

./: .cirrus.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CI.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  action.yml  appveyor.yml  azure-pipelines.yml  azure-template.yml  cibuildwheel.py  meson.build  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  setup.cfg  setup.py  spam.c
.circleci/: config.yml  prepare.sh
.github/: CODEOWNERS  auto-merge.yml  dependabot.yml  install_latest_podman.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: copilot-setup-steps.yml  example.yml  prbot.yml  release.yml  sample_build.yml  test.yml  tinkering.yml  update-dependencies.yml  update-major-minor-tag.yml  zizmor.yml
cibuildwheel/: __init__.py  __main__.py  architecture.py  audit.py  backend.py  bashlex_eval.py  ci.py  common.py  container.py  crosslinux.py  docker_container.py  docker_container_remote.py  environment.py  errors.py  extra.py  from_sdist.py  frontend.py  functools_cached_property_38.py  ios.py  linux.py  logger.py  macos.py  oci_container.py  options.py  platform_backend.py  platform_interface.py  projectfile.py  projectfiles.py  pyodide.py  quick_build.py  schema.py  selector.py  typing.py  util.py  venv.py  virtualenv.py  windows.py
cibuildwheel/_compat/: _functools_cached_property_38.py  functools.py  tarfile.py  tomllib.py  typing.py
cibuildwheel/resources/: _cross_venv.py  _rust_shim.py  build-platforms.toml  cibuildwheel.schema.json  constraints-pyodide-0_22.txt  constraints-pyodide-0_23.txt  constraints-pyodide312.txt  constraints-pyodide313.in  constraints-pyodide313.txt  constraints-pyodide314.txt  constraints-python2.txt  constraints-python27.txt  constraints-python310.txt  constraints-python311.txt  constraints-python312.txt  constraints-python313.txt  constraints-python314.txt  constraints-python315.txt  constraints-python35.txt  constraints-python36.txt  constraints-python37.txt  constraints-python38.txt  constraints-python39.txt  constraints.in  constraints.txt  defaults.toml  free-threaded-enable-313.xml  free-threaded-enable-314.xml  free-threaded-enable-315.xml  get-pip.py  install_certifi.py  nodejs.toml  pinned_docker_images.cfg  pypy2.7-7.2.0.patch  pypy3.6-7.2.0.patch  pypy3.6.patch  pypy_venv.patch  pypy_venv_1.patch  pypy_venv_1_27.patch  pypy_venv_2.patch  (+5 more)
cibuildwheel/util/: __init__.py  _cooldown.py  cmd.py  file.py  files.py  helpers.py  misc.py  packaging.py  python_build_standalone.py  resources.py
docs/: changelog.md  ci-services.md  configuration.md  contributing.md  cpp_standards.md  deliver-to-pypi.md  diagram.html  diagram.md  extra.css  extra.js  faq.md  index.md  main.py  mkdocs.yml  options.md  platforms.md  setup.md  working-examples.md
docs/_internal/: pyodide-maintenance.md
docs/data/: images.yml  projects.schema.json  projects.yml
docs/mkdocs_execute_python_plugin/: setup.py
docs/mkdocs_include_markdown_plugin/: setup.py
examples/: appveyor-minimal.yml  azure-pipelines-minimal.yml  bitbucket-pipelines-deploy.yml  bitbucket-pipelines-minimal.yml  circleci-minimal.yml  cirrus-ci-intel-mac.yml  cirrus-ci-minimal.yml  github-apple-silicon.yml  github-deploy-only.yml  github-deploy.yml  github-deployment.yml  github-minimal.yml  github-pipx.yml  github-with-qemu.yml  gitlab-minimal.yml  gitlab-with-qemu.yml  travis-ci-deploy-only.yml  travis-ci-deploy.yml  travis-ci-minimal.yml  travis-ci-test-and-deploy.yml
test/: README.md  _cross_venv_test_android.py  conftest.py  project_generator.py  test_01_basic.py  test_02_testing.py  test_03_before_build.py  test_04_build_skip.py  test_05_environment.py  test_06_docker_images.py  test_07_ssl.py  test_08_manylinux2010_only.py  test_08_manylinuxXXXX_only.py  test_09_cpp_standards.py  test_09_setup_cfg.py  test_0_basic.py  test_10_before_test.py  test_10_cpp_standards.py  test_12_subdir_package.py  test_1_ssl.py  test_abi3audit.py  test_abi_variants.py  test_android.py  test_before_all.py  test_before_build.py  test_before_test.py  test_build_frontend_args.py  test_build_skip.py  test_container_engine.py  test_container_images.py  test_cpp_standards.py  test_custom_repair_wheel.py  test_dependency_versions.py  test_docker_images.py  test_emscripten.py  test_emulation.py  test_environment.py  test_from_sdist.py  test_ios.py  test_limited_api.py  (+22 more)
test/01_basic/: cibuildwheel_basic_test.py  cibuildwheel_test.py  setup.py  spam.c
test/02_test/: cibuildwheel_test.py  cibuildwheel_test_test.py  environment.json
test/03_before_build/: cibuildwheel_before_build_test.py  cibuildwheel_test.py  environment.json  setup.py
test/04_build_skip/: check.py  cibuildwheel_build_skip_test.py  cibuildwheel_test.py  environment.json  setup.py
test/04_skip/: environment.json  setup.py
test/05_environment/: cibuildwheel_environment_test.py  cibuildwheel_test.py  environment.json  setup.py  spam.c  version.txt
test/06_docker_images/: check.py  cibuildwheel_docker_images_test.py  cibuildwheel_test.py  environment.json  setup.py
test/07_ssl/: check.py  setup.py  (+2 more)
unit_test/: Containerfile.podman.alpine  abi3audit_test.py  all_build_options_test.py  architecture_test.py  audit_test.py  build_ids_test.py  build_selector_test.py  ci_detection_test.py  conftest.py  dependency_constraints_test.py  docker_container_test.py  download_test.py  environment_test.py  get_platform_test.py  linux_build_steps_test.py  linux_build_test.py  logger_test.py  macos_environment_test.py  macos_rosetta_test.py  main_commands_test.py  main_function_test.py  main_function_test_utils.py  main_options_test.py  main_platform_test.py  main_util_fixtures.py  oci_container_test.py  option_prepare_test.py  options_test.py  options_toml_test.py  platform_test.py  projectfiles_test.py  pyodide_test.py  python_build_standalone_test.py  resources_test.py  runner_test.py  test_sha256.py  test_wheel_print.py  utils.py  utils_test.py  validate_schema.py  (+3 more)
(+106 files in other folders)
