[metadata]
name = cibuildwheel
version = 2.0.0b2
description = Build Python wheels on CI with minimal configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/cibuildwheel
author = Joe Rickerby
author_email = joerick@mac.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
keywords = ci,wheel,packaging,pypi,travis,appveyor,macos,linux,windows
project_urls =
    Changelog=https://github.com/pypa/cibuildwheel#changelog
    Documentation=https://cibuildwheel.readthedocs.io/

[options]
packages = find:
install_requires =
    bashlex!=0.13
    bracex
    certifi
    packaging
    toml
    typing_extensions;python_version < '3.8'
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    cibuildwheel = cibuildwheel.__main__:main

[options.package_data]
cibuildwheel = resources/*

[options.packages.find]
include =
    cibuildwheel

[flake8]
ignore = E501,W503,E741,E226,B950,E203
select = C,E,F,W,B,B9
application-import-names = cibuildwheel
exclude =
    cibuildwheel/resources/,
    dist/,
    build/,
    .git/,
    env/,
    env2/,
    env??/,
    .venv/,
    site/
