[metadata]
name = cibuildwheel
version = 2.12.2
description = Build Python wheels on CI with minimal configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/cibuildwheel
author = Joe Rickerby
author_email = joerick@mac.com
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
keywords = ci,wheel,packaging,pypi,travis,appveyor,macos,linux,windows
project_urls =
    Changelog=https://github.com/pypa/cibuildwheel#changelog
    Documentation=https://cibuildwheel.readthedocs.io/

[options]
packages = find:
install_requires =
    bashlex!=0.13
    bracex
    certifi
    filelock
    packaging>=20.9
    platformdirs
    tomli;python_version < '3.11'
    typing-extensions>=4.1.0;python_version < '3.11'
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    cibuildwheel

[options.entry_points]
console_scripts =
    cibuildwheel = cibuildwheel.__main__:main

[options.package_data]
cibuildwheel = resources/*
